--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
             </nav>
             <ul class="adress_header list">
                 <li>
-                    
+
                     <a class="adress_header_l_i link address_color" href="mailto:info@devstudio.com">
-<svg width="16" height="12" class="svg_hover">
-    <use href="./images/symbole_heder_lorem.svg#icon-email"></use>
-</svg>
+                        <svg width="16" height="12" class="svg_hover">
+                            <use href="./images/symbole_heder_lorem.svg#icon-email"></use>
+                        </svg>
                         info@devstudio.com</a>
                 </li>
 
                 <li>
-                    
+
                     <a class="adress_header_l_i link address_color" href="tel:+48111111111">
-                    <svg width="16" height="12" class="svg_hover odstep_miedzy_email_telefon">
-                        <use href="./images/symbole_heder_lorem.svg#icon-smartphone"></use>
-                    </svg>
+                        <svg width="16" height="12" class="svg_hover odstep_miedzy_email_telefon">
+                            <use href="./images/symbole_heder_lorem.svg#icon-smartphone"></use>
+                        </svg>
                         +48 111 111 111</a>
                 </li>
             </ul>
@@ -361,32 +361,32 @@
                 <h2 class="naglowek_drugiego_stopnia our_team_padding">Nasi klienci</h2>
 
                 <ul class="list icon_list">
-                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k" href="#">
+                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k svg_padding" href="#">
                             <svg width="170" height="92" class="icon_color">
                                 <use href="./images/symbole_ourteam_social.svg#icon-klient1"></use>
                             </svg>
                         </a></li>
-                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k" href="#">
+                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k svg_padding" href="#">
                             <svg width="170" height="92" class="icon_color">
                                 <use href="./images/symbole_ourteam_social.svg#icon-klient2"></use>
                             </svg>
                         </a></li>
-                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k" href="#">
+                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k svg_padding" href="#">
                             <svg width="170" height="92" class="icon_color">
                                 <use href="./images/symbole_ourteam_social.svg#icon-klient3"></use>
                             </svg>
                         </a></li>
-                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k" href="#">
+                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k svg_padding" href="#">
                             <svg width="170" height="92" class="icon_color">
                                 <use href="./images/symbole_ourteam_social.svg#icon-klient4"></use>
                             </svg>
                         </a></li>
-                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k" href="#">
+                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k svg_padding" href="#">
                             <svg width="170" height="92" class="icon_color">
                                 <use href="./images/symbole_ourteam_social.svg#icon-klient5"></use>
                             </svg>
                         </a></li>
-                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k" href="#">
+                    <li class="svg_list_i_c_k"><a class="svg_link_i_c_k svg_padding" href="#">
                             <svg width="170" height="92" class="icon_color">
                                 <use href="./images/symbole_ourteam_social.svg#icon-klient6"></use>
                             </svg>
