--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
                 </a>
                 <ul class="nav__list list">
                     <li>
-                        <a class="nav__l_i link" href="#">Agency</a>
+                        <a class="nav__l_i link" href="./index.html">Agency</a>
                     </li>
                     <li>
-                        <a class="nav__l_i link" href="./portfolio.html">Portfolio</a>
+                        <a class="nav__l_i link active_page" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li>
                         <a class="nav__l_i link" href="#">Contact</a>
