--- a/index.html
+++ b/index.html
@@ -152,15 +152,21 @@
                     Czym się zajmujemy</h2>
                 <ul class="lorem_list lista_zdjec">
                     <li class="list box">
-                        <img src="./images/box1.jpg" alt="zdjęcie z tworzenia algorytmu" width="370" height="294">
+                        <img src="./images/box1.jpg" 
+                        alt="zdjęcie z tworzenia algorytmu" width="370" height="294">
+                        <div class="descrition-at-picture">Aplikacje komputerowe</div>
                     </li>
                     <li class="list box">
-                        <img src="./images/box2.jpg" alt="zdjęcie z tworzenia grafik do porówniania telefonów"
+                        <img src="./images/box2.jpg" 
+                        alt="zdjęcie z tworzenia grafik do porówniania telefonów"
                             width="370" height="294">
+                            <div class="descrition-at-picture">Aplikacje mobilne</div>
                     </li>
                     <li class="list box">
-                        <img src="./images/box3.jpg" alt="zdjęcie z zabawy z koloami na tablecie" width="370"
+                        <img src="./images/box3.jpg" 
+                        alt="zdjęcie z zabawy z koloami na tablecie" width="370"
                             height="294">
+                            <div class="descrition-at-picture">Rozwiązania graficzne</div>
                     </li>
                 </ul>
             </div>
